--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   </main>
   <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Yiwen Chen </a>.
+    Coded by <a href="https://www.frontendmentor.io/profile/CHEN-YiWen">Yiwen Chen </a>.
   </footer>
 </body>
 </html>
